--- a/packages/githublight/style/variables.css
+++ b/packages/githublight/style/variables.css
@@ -188,10 +188,10 @@ https://github.com/primer/primitives/blob/main/data/colors/themes/light.ts.
   * The following variables, specify the visual styling of borders in JupyterLab.
   */
   --jp-border-width: 1px;
-  --jp-border-color0: var(--gh-light-gray0);
-  --jp-border-color1: var(--gh-light-gray1);
-  --jp-border-color2: var(--gh-light-gray2);
-  --jp-border-color3: var(--gh-light-gray3);
+  --jp-border-color0: var(--gh-light-gray2);
+  --jp-border-color1: var(--gh-light-gray3);
+  --jp-border-color2: var(--gh-light-gray4);
+  --jp-border-color3: var(--gh-light-gray5);
   --jp-border-radius: 2px;
   /* UI Fonts
   *
@@ -220,9 +220,9 @@ https://github.com/primer/primitives/blob/main/data/colors/themes/light.ts.
   /* active item */
   --jp-ui-font-color0: var(--gh-light-black);
   /* sidebar files & top menu */
-  --jp-ui-font-color1: var(--gh-light-gray9);
-  --jp-ui-font-color2: var(--gh-light-gray8);
-  --jp-ui-font-color3: var(--gh-light-gray7);
+  --jp-ui-font-color1: var(--gh-light-gray8);
+  --jp-ui-font-color2: var(--gh-light-gray6);
+  --jp-ui-font-color3: var(--gh-light-gray5);
   /*
   * Use these against the brand/accent/warn/error colors.
   * These will typically go from light to darker, in both a dark and light theme.
@@ -290,10 +290,10 @@ https://github.com/primer/primitives/blob/main/data/colors/themes/light.ts.
   --jp-layout-color1: var(--gh-light-gray0);
   /* activity bar, inactive tab, status bar*/
   /* here use same as inactive tabs */
-  --jp-layout-color2: var(--gh-light-gray0);
+  --jp-layout-color2: var(--gh-light-gray1);
   /* editor/notebok surrounding area */
-  --jp-layout-color3: var(--gh-light-gray0);
-  --jp-layout-color4: var(--gh-light-gray0);
+  --jp-layout-color3: var(--gh-light-gray2);
+  --jp-layout-color4: var(--gh-light-gray3);
   /* Inverse Layout
   *
   * The following are the inverse layout colors use in JupyterLab. In a light
@@ -331,10 +331,10 @@ https://github.com/primer/primitives/blob/main/data/colors/themes/light.ts.
   --jp-accent-color2: var(--gh-light-blue2);
   --jp-accent-color3: var(--gh-light-blue1);
   /* State colors (warn, error, success, info) */
-  --jp-warn-color0: var(--gh-light-gray6);
-  --jp-warn-color1: var(--gh-light-gray5);
-  --jp-warn-color2: var(--gh-light-gray4);
-  --jp-warn-color3: var(--gh-light-gray3);
+  --jp-warn-color0: var(--gh-light-orange6);
+  --jp-warn-color1: var(--gh-light-orange5);
+  --jp-warn-color2: var(--gh-light-orange4);
+  --jp-warn-color3: var(--gh-light-orange3);
   --jp-error-color0: var(--gh-light-red4);
   --jp-error-color1: var(--gh-light-red3);
   --jp-error-color2: var(--gh-light-red2);
@@ -448,6 +448,8 @@ https://github.com/primer/primitives/blob/main/data/colors/themes/light.ts.
   --jp-scrollbar-thumb-radius: 9px;
   /* set to a large-ish value for rounded endcaps on the thumb */
   --jp-icon-contrast-color0: var(--gh-light-gray6);
+  /* set input active box shadow color for the main search */
+  --jp-input-active-box-shadow-color: var(--gh-light-blue6);
 }
 
 /*# sourceMappingURL=variables.css.map */
